--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  flnet:
+    name: fl_network
+
 services:
   server:
     build:
@@ -5,18 +9,5 @@ services:
     container_name: fl_server
     ports:
       - "8080:8080"
-
-  client1:
-    build:
-      context: ./client_node
-    container_name: fl_client1
-
-  client2:
-    build:
-      context: ./client_node
-    container_name: fl_client2
-
-  client3:
-    build:
-      context: ./client_node
-    container_name: fl_client3
+    networks:
+      - flnet
