--- a/client_node/Dockerfile
+++ b/client_node/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "-u", "metrics.py"]
+CMD ["python", "-u", "main.py"]
 
